# sinflow

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: release_to_pypi.yml  setup_and_run_tests.yml
docs/source/: api.rst  conf.py  index.rst  install.rst  quickstart.ipynb
docs/source/api/: flow.rst  kde.rst  mrqs.rst  tools.rst  transforms.rst
src/sinflow/: __init__.py  flow.py  kde.py  mrqs.py  tools.py  transforms.py
tests/: test_flow.py  test_kde.py  test_mrqs.py  test_tools.py  test_transforms.py
